[tool.poetry]
name = "clickhouse-driver"
version = "0.2.1"
description = "ClickHouse Python Driver with native interface support"
authors = ["Konstantin Lebedev <kostyan.lebedev@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7.1"
pytz = "^2021.1"
tzlocal = "<3.0"

[tool.poetry.extras]
lz4 = ["lz4<=3.0.1", "clickhouse-cityhash>=1.0.2.1"]
zstd = ["zstd", "clickhouse-cityhash>=1.0.2.1"]
numpy = ["numpy>=1.12.0", "pandas>=0.24.0"]

[tool.poetry.dev-dependencies]
nose = "^1.3.7"
freezegun = "^1.1.0"
lz4 = "<=3.0.1"
zstd = "^1.5.0"
clickhouse-cityhash = ">=1.0.2.1"
numpy = "^1.21.0"
pandas = "^1.3.0"
mock = "^4.0.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
